Fix table colors in dark mode (#700)
* Add borders to tables


* margins and padding around tables


* Fix table mode coloring. Resolves #690


* table styling fixes


---------

--- a/themes/geekboot/assets/scss/_content.scss
+++ b/themes/geekboot/assets/scss/_content.scss
@@ -115,7 +115,16 @@ h3, h4, h5, h6 {
   border-radius: 6px;
   border-collapse: separate;
   border-spacing: 0px;
+  margin-bottom: 0px !important;
 }
+
+.table-responsive {
+  margin-bottom: 1rem;
+  border: 1px solid #{$fog-200};
+  background-color: var(--body-background) !important;
+  color: var(--body-font-color);
+}
+
 // Hide bottom borders and wider padding for header items
 .table th {
   border-bottom: none;
@@ -131,6 +140,7 @@ h3, h4, h5, h6 {
   padding-right: 24px;
   padding-top: 12px;
   padding-bottom: 12px;
+  border-top: 1px solid #{$fog-300};
 }
 // Decrease padding for small tables
 .table.table-sm th {
@@ -146,17 +156,14 @@ h3, h4, h5, h6 {
   padding-bottom: 8px;
 }
 
+.table a{
+  color: var(--content-link-color);
+}
 
 // Color theme toggle
 .form-check-input:checked {
   background-color: #{$aqua-700};
   border-color: #{$aqua-700};
-}
-
-.table {
-  color: var(--font-body-color);
-  // Override bootstrap defaults to support dark mode
-  --bs-table-hover-color: var(--font-body-color);
 }
 
 .ga-tag{
